<resources>
    <string name="app_name">Codec</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="browse_files">Select Video</string>
    <string name="no_file_selected">No media selected</string>
    <string name="has_encoder">Has Encoder:</string>
    <string name="is_hardware_accelerated">Is Hardware Accelerated:</string>
    <string name="supported_types">Supported Types:</string>
    <string name="software_only">Software Only:</string>
    <string name="provider">Provider:</string>
    <string name="textview">TextView</string>
</resources>